--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ericblade/quagga2": "^1.12.1",
     "firebase": "^12.7.0",
-    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "react": "19.2.3",
